WanaLyzer/out/numpy/typing/tests/data/pass/arrayterator.pyi
import numpy as np
from _typeshed import Incomplete
from typing import Any

AR_i8: np.ndarray[Any, np.dtype[np.int_]]
ar_iter: Incomplete
