WanaLyzer/out/numpy/typing/tests/data/fail/ndarray_misc.pyi
import numpy as np
from _typeshed import Incomplete
from typing import Any

f8: np.float64
AR_f8: np.ndarray[Any, np.dtype[np.float64]]
AR_M: np.ndarray[Any, np.dtype[np.datetime64]]
AR_b: np.ndarray[Any, np.dtype[np.bool_]]
ctypes_obj: Incomplete
